# demo-api

./: README.md  alembic.ini  items_views.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_07_21_1110-45ba5719d6c4_create_products_table.py  2025_07_21_1209-edf08e8107e9_create_users_table.py  2025_07_21_1220-4113f4e75b5c_create_users_table.py  2025_07_21_1221-396cf7d17134_create_posts_table.py  2025_07_21_1841-c240c95bb1e1_create_profile_table.py
api_v1/products/: crud.py  dependencies.py  views.py
core/models/: __init__.py  db_helper.py  post.py  profile.py  user.py
users/: schemas.py  views.py
